Preparação do projeto para validação de testes (cobertura e mutação)